<resources>
    <string name="app_name">ExamenApp</string>
    <string name="Titulo">Bienvenido</string>
    <string name="btncalificar">Calificar</string>
    <string name="btnanterior">Anterior</string>
    <string name="btnsiguiente">Siguiente</string>
    <string name="imgdescription">Imagen del tecnologico</string>
    <string name="btncomenzar">Comenzar examen</string>
    <string name="titulos">Examen</string>
    <string name="txtresutlado">Resultados</string>
    <string name="lblaciertos">"Aciertos: "</string>
    <string name="lblfallos">"Errores: "</string>
    <string name="lblcalificacion">"Calificacion: "</string>
    <string name="btnsalir">Salir</string>

</resources>